fixed stackoverflow error when parsing order objects + added loading animations to accounting/order overviews + fixed bank accounts breaking the signup process (#118)

--- a/src/main/web/src/app/club-management/accounting/accounting.component.scss
+++ b/src/main/web/src/app/club-management/accounting/accounting.component.scss
@@ -123,3 +123,9 @@ memo-expandable-table {
 	}
 
 }
+
+@media all and (min-width: $options-breakpoint) {
+	.loader {
+		left: 65%;
+	}
+}
