--- a/src/main/web/src/app/club-management/order-overview/order-overview.component.scss
+++ b/src/main/web/src/app/club-management/order-overview/order-overview.component.scss
@@ -92,3 +92,10 @@ a.add-order-button {
 		right: 2rem;
 	}
 }
+
+@media all and (min-width: $options-breakpoint) {
+	.loader {
+		left: 65%;
+	}
+}
+
